feat: select and approve fixed artifact publications in the web client
